[tool.poetry]
name = "bureaudesrip"
version = "0.1.0"
description = ""
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.8"
coloredlogs = "^15.0.1"
rich = "^12.2.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
ipython = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
